--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <input id="inputWeight" type="text">
-    <select name="" id="selectPlanet"></select>
+    <input id="inputWeight" type="text" class="grow">
+    <select name="" id="selectPlanet" class="grow"></select>
     <button id="calculateWeight" class="grow">Calculate Weight</button>
     <p id="output"></p>
     <p id="HMDYW"> How much do you weigh?</p>
